...
          fontWeight: FontWeight.w400,
          fontSize: 14,
        ),
        tabs: const [
          Tab(
            icon: Icon(Icons.task_alt, size: 20),
            text: 'Tasks',
          ),
          Tab(
            icon: Icon(Icons.calendar_month, size: 20),
            text: 'Calendar',
          ),
          Tab(
            icon: Icon(Icons.analytics, size: 20),
            text: 'Summary',
          ),
          Tab(
...
